# docx-footer-extractor

./: MANIFEST.in  README.md  bkup_MANIFEST.in  pymy.py  pyproject.toml  setup.py
data/: CS Connectivity_R13.0_D002055364_RevA.docx  CS DicomConfigTool_R13.0_D002055371_RevA.docx  CS Exam Overview_verA.docx  CS ExamCards verA.docx  CS ExamCardsDatabaseService_Voxel_D002055389_RevA.docx  CS LayoutManagerService__verA.docx  CS Log file handling.docx  CS PDT Voxel.docx  ComponentSpecifications_MR-RT_RTgo5.13_D002050479_RevA.docx  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  metadata_results.txt
docx_footer_extractor/: __init__.py  extractor.py
tests/: __init__.py  test_extractor.py
