[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-footer-extractor"
version = "1.0.0"
description = "A Python library for extracting metadata from DOCX file footers using parallel processing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sunil K Sundaram", email = "sunilsmindspace@gmail.com"},
]
keywords = ["docx", "metadata", "footer", "parallel", "extraction", "office", "documents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "python-docx>=0.8.11",
]

[project.urls]
Homepage = "https://github.com/sunilsmindspace/docx-footer-extractor"
"Bug Reports" = "https://github.com/sunilsmindspace/docx-footer-extractor/issues"
Source = "https://github.com/sunilsmindspace/docx-footer-extractor"